# state_machine

./: .gitignore  FreeRTOSConfig.h  Makefile  README.md  TCP_comm.c  build.txt  freertos_setup.sh  main.c  run_master_comm_test.sh  run_master_handler_test.sh  run_slave_comm_test.sh  run_slave_restart_threads_test.sh  slave_log.txt
config/: comm_cfg.h  slave_TCP_comm_cfg.h  thread_handler_cfg.h
logger/include/: logger.h
logger/src/: logger.c
master/include/: master_comm.h  master_handler.h  master_state_machine.h
master/src/: master_comm.c  master_handler.c  master_state_machine.c
master/tests/test_master_comm/: CMakeLists.txt  test_master_comm.cpp
master/tests/test_master_handler/: CMakeLists.txt  test_master_handler.cpp
master/tests/test_master_state_machine/: CMakeLists.txt  test_master_state_mashine.cpp
slave/include/: TCP_comm.h  slave_TCP_comm.h  slave_comm.h  slave_handler.h  slave_restart_threads.h  slave_state_machine.h
slave/src/: TCP_comm.c  slave_TCP_comm.c  slave_comm.c  slave_handler.c  slave_restart_threads.c  slave_state_machine.c
slave/tests/test_slave_comm/: CMakeLists.txt  test_slave_comm.cpp
slave/tests/test_slave_handler/: CMakeLists.txt  test_slave_handler.cpp
slave/tests/test_slave_restart_threads/: CMakeLists.txt  test_slave_restart_threads.cpp
slave/tests/test_slave_state_machine/: CMakeLists.txt  test_slave_state_machine.cpp
test_scripts/: run_master_state_mashine_test.sh  run_slave_handler_test.sh  run_slave_state_machine_test.sh
types/: state_mashine_types.h  types.h
